--- a/style.css
+++ b/style.css
@@ -2,7 +2,14 @@
     position: absolute;
     left: 0;
     top: 0;
-    z-index: -1;
+    z-index: -2;
+}
+
+#overlay-canvas {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -2;
 }
 
 button {
