--- a/style.css
+++ b/style.css
@@ -34,11 +34,29 @@ button {
         outline-style: dashed;
     }
 }
+@-webkit-keyframes blink {
+    50% {
+        outline-color: purple;
+        outline-style: dashed;
+    }
+}
 
 .highlight {
-    animation-name: blink;
+    outline-color: white;
+    outline-style: dashed;
+    animation-name: blink; 
     animation-duration: .5s;
     animation-timing-function: step-end;
     animation-iteration-count: infinite;
     animation-direction: alternate;
+
+
+    -webkit-animation-name: blink; 
+    -webkit-animation-duration: .5s;
+    -webkit-animation-timing-function: step-end;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+
+
+
 }
